Added another thing Nirmitee wanted to work on.

--- a/minutes/2019-12-06.md
+++ b/minutes/2019-12-06.md
@@ -10,6 +10,7 @@
     -   Player Name
 -   Planned activity before next scrum
     -   Timer Animation
+    -   Multiplayer Screen
 -   Obstacles/Issues
     -   Screen controller is "weird/jacked up" -- It needs some work to allow for better switching or maybe error resolution
 
